<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_general">
        <ListPreference
            android:key="app_lang"
            android:title="@string/language_title"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="ru" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_about">
        <Preference
            android:key="app_version"
            android:title="@string/app_version_title"
            android:selectable="false" />

        <Preference
            android:key="about_app"
            android:title="@string/about_openconnect" />
    </PreferenceCategory>

</PreferenceScreen>
