<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/basic_settings"
        android:key="pref_key_server"
        android:layout="@layout/preference_category_header">
        <EditTextPreference
            android:key="profile_name"
            android:title="@string/profile_name"
            android:layout="@layout/preference_standard_compact"
            android:inputType="text|textNoSuggestions|textCapSentences"
            android:defaultValue="" />
        <EditTextPreference
            android:key="server_address"
            android:title="@string/server_address"
            android:layout="@layout/preference_standard_compact"
            android:dialogMessage="@string/add_profile_hostname_prompt"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:defaultValue="" />
        <app.openconnect.ShowTextPreference
            android:key="user_certificate"
            android:title="P12 key"
            android:layout="@layout/preference_standard_compact"
            android:defaultValue="" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_header"
        android:title="@string/split_tunnel_apps_enabled">
        <SwitchPreference
            android:key="split_tunnel_apps_enabled"
            android:title="@string/split_tunnel_apps_enabled"
            android:layout="@layout/preference_standard_compact"
            android:summary="@string/split_tunnel_apps_enabled_summary"
            android:defaultValue="false" />
        <Preference
            android:key="split_tunnel_apps_select"
            android:title="@string/split_tunnel_apps_select"
            android:layout="@layout/preference_standard_compact"
            android:dependency="split_tunnel_apps_enabled" />
    </PreferenceCategory>
</PreferenceScreen>
