<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_category_header"
        android:title="@string/split_tunnel_apps_enabled">
        <SwitchPreference
            android:key="split_tunnel_apps_enabled"
            android:title="@string/split_tunnel_apps_enabled"
            android:layout="@layout/preference_standard_compact"
            android:summary="@string/split_tunnel_apps_enabled_summary"
            android:defaultValue="false" />
        <Preference
            android:key="split_tunnel_apps_select"
            android:title="@string/split_tunnel_apps_select"
            android:layout="@layout/preference_standard_compact"
            android:dependency="split_tunnel_apps_enabled" />
    </PreferenceCategory>
</PreferenceScreen>
